delete functionality implemented

--- a/PDF_Extract/index.html
+++ b/PDF_Extract/index.html
@@ -6,6 +6,11 @@
     <title>pdf_extract</title>
     <link rel="stylesheet" href="https://rawgit.com/lykmapipo/themify-icons/master/css/themify-icons.css">
   </head>
+  <style>
+    .ivu-table-cell{
+      display: inline;
+    }
+  </style>
   <body>
     <div id="app"></div>
     
